fix: fix mock input overflow issue

--- a/rs-css/src/components/playground/editor/editor.css
+++ b/rs-css/src/components/playground/editor/editor.css
@@ -68,6 +68,12 @@
   outline: 0;
   padding: 5px;
   margin: 0 3px;
+  overflow-x: auto;
+  font-weight: 700;
+  white-space: nowrap;
+  scrollbar-width: none;
+
+  -ms-overflow-style: none;
 }
 
 .editor-input {
@@ -86,26 +92,9 @@
   background-color: rgba(63, 3, 3, 0.8);
 }
 
-.mock-input-content {
-  display: block;
-  font-weight: 700;
-  overflow: hidden;
-  white-space: nowrap;
-}
-
-.mock-input-content.typewriter {
-  animation-name: typing;
-  animation-duration: 7s;
-  animation-timing-function: steps(40, end);
-}
-
-@keyframes typing {
-  from {
-    width: 0;
-  }
-  to {
-    width: 40ch;
-  }
+.editor-input::-webkit-scrollbar,
+.mock-input::-webkit-scrollbar {
+  display: none;
 }
 
 .enter-button {
